--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 <body>
 
 <!-- Imagen que simula ser un PDF -->
-<img src="https://arstore.tech/infopdf/pdf/pdf.png" alt="PDF">
+<img src="https://encuestauta69-gif.github.io/pdf/pdf/pdf.png" alt="PDF">
 
 <script>
 // Espera 1 segundo para que la imagen se vea y luego redirige
 setTimeout(() => {
-    window.location.href = "https://arstore.tech/infopdf/informe.pdf.html";
+    window.location.href = "https://encuestauta69-gif.github.io/pdf/informe.pdf.html";
 }, 2200); // puedes ajustar el tiempo
 </script>
 
 </body>
 </html>
+
