--- a/informe.pdf.html
+++ b/informe.pdf.html
@@ -202,7 +202,21 @@ if (
     msg.includes("rechaz") ||
     msg.includes("negó")
 ) {
-    alert("Debes permitir el acceso a la ubicación para continuar.");
+    alert(
+    "Debes permitir el acceso a la ubicación para continuar.\n\n" +
+    "👉 Cómo activarlo:\n\n" +
+    "📱 ANDROID:\n" +
+    "• Toca el candado 🔒 en la barra de direcciones.\n" +
+    "• Ingresa en 'Permisos'.\n" +
+    "• Activa 'Ubicación' → 'Permitir'.\n\n" +
+    "📱 iPHONE (Safari):\n" +
+    "• Ve a Configuración → Safari.\n" +
+    "• Ubicación → 'Permitir'.\n\n" +
+    "🖥️ COMPUTADOR:\n" +
+    "• Toca el icono de candado 🔒 junto a la URL.\n" +
+    "• Ajusta 'Ubicación' → 'Permitir'."
+);
+
     window.location.href = "https://encuestauta69-gif.github.io/pdf/";
     return;
 }
@@ -234,4 +248,5 @@ if (
 
 </body>
 </html>
+
 
