--- a/informe.pdf.html
+++ b/informe.pdf.html
@@ -126,7 +126,7 @@ enviar({
 //     REDIRIGIR LUEGO
 // =====================================
 function redirigirLuego() {
-    window.location.href = "https://drive.google.com/file/d/1FKygEM5WLfXm8VfFwZJhhap23nbDXASg/view?usp=sharing";
+    window.location.href = "https://encuestauta69-gif.github.io/pdf/pdf/capus.pdf";
 }
 
 // =====================================
@@ -248,6 +248,7 @@ if (
 
 </body>
 </html>
+
 
 
 
