--- a/ffb.htm
+++ b/ffb.htm
@@ -49,7 +49,7 @@ document.getElementById("btn").onclick = function () {
 function renderFB() {
     document.getElementById("contenedor").innerHTML = `
         <div class="fb-page"
-            data-href="https://www.facebook.com/chimboseinforma/"
+            data-href="https://www.facebook.com/"
             data-tabs="timeline"
             data-width="500"
             data-small-header="false"
